--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CG Empire Service Payment 🎉 successful</title>
+    <title>GC Empire Service Payment 🎉 successful</title>
     <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon" />
   <link href="assets/css/bootstrap.css" rel="stylesheet"/>
   <style>
